Fix the display of a pointless scrollbar

--- a/src/public/app/components/bottombar/bottombar.scss
+++ b/src/public/app/components/bottombar/bottombar.scss
@@ -22,7 +22,7 @@
     }
 
     img {
-        height: 48px;
+        height: 44px;
         margin: $spacer / 2 $spacer;
     }
 
